change ag-grid styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+.ag-theme-alpine-dark {
+  /* use theme parameters where possible */
+  --ag-foreground-color: #8A041B;
+  /* --ag-background-color: #570720; */
+  --ag-alpine-active-color: white;
+  /* --ag-odd-row-background-color: #451625; */
+}
+
+
+.ag-theme-alpine-dark .ag-header-cell-label {
+  color: #F7BA00
+}
+
+.ag-theme-alpine-dark .ag-ltr .ag-cell  {
+  color: white
+}
